--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "artillery": "^2.0.0-38",
     "chai": "^4.3.10",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
